--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,3 +16,9 @@ a {
 * {
   box-sizing: border-box;
 }
+
+/* Take note, this is a hack in order to make Chakra display the checkbox on opposite sides. */
+.checkbox-reversed > .chakra-checkbox__label { 
+    flex-grow: 1;
+    margin: 0
+}
