--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,7 @@ a {
 }
 
 /* Take note, this is a hack in order to make Chakra display the checkbox on opposite sides. */
-.checkbox-reversed > .chakra-checkbox__label { 
-    flex-grow: 1;
-    margin: 0
+/* New - custom to override spacing */
+.checkbox-custom > .chakra-checkbox__label { 
+    margin-inline-start: 1rem !important
 }
