changed user select to fix ios bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,9 +26,9 @@ a {
 
 @media all and (display-mode: standalone) {
     /* Here goes the CSS rules that will only apply if app is running standalone */
-    * {
+    *:not(input):not(textarea) {
         user-select: none;
-    }
+      }
     #install-button {
         display: none
     }
